# Mosp

./: .gitignore  Cargo.toml  build.rs  readme.md
.cursor/rules/: development-guidelines.mdc  gerenal.mdc  project-structure.mdc  technical-architecture.mdc
docs/: architecture-overview.md  development-plan.md  development-plan_cn.md  input-processing.md  rendering-system.md  tech-stack.md  user-guide-cn.md
docs/development/: index.md  setup-guide.md
docs/development/infrastructure/: canvas-implementation.md  data-storage.md  project-setup.md
src/: app.rs  canvas.rs  config.rs  drawing_engine.rs  error.rs  event.rs  i18n.rs  main.rs  storage.rs  ui.rs  window.rs
src/platform/: common.rs  macos.rs  mod.rs
src/storage/: cache.rs  incremental.rs  migration.rs  mod.rs  relational.rs
src/tools/: arrow.rs  brush.rs  common.rs  eraser.rs  manager.rs  mod.rs  selection.rs  shape.rs  tests.rs  text.rs
src/ui/: canvas_controller.rs  canvas_view.slint
ui/: main.slint
